# passwordchecker

./: CMakeLists.txt  README.md  passwordchecker-ldap.c  passwordchecker-ldap.h  passwordchecker-ui.c  passwordchecker.c
.gear/: passwordchecker.spec  rules
data/: PasswordChecker.desktop  PasswordChecker.gresource.xml  PasswordCheckerSettings.desktop  PasswordCheckerSettings.gresource.xml  org.altlinux.PasswordCheckerSettings.desktop  org.altlinux.passwordchecker.gschema.xml  passwordchecker.service
data/ui/: PasswordChecker-gnome.ui  PasswordChecker-gtk.ui  PasswordCheckerSettings-gnome.ui  PasswordCheckerSettings-gtk.ui  page_application.glade  page_connection.glade  passwordchecker-gnome-page-app.cmb  passwordchecker-gnome-page-app.ui  passwordchecker-gnome-page-con.cmb  passwordchecker-gnome-page-con.ui  passwordchecker-gnome-switcher.cmb  passwordchecker-gnome-switcher.ui  passwordchecker-gnome-window.cmb  passwordchecker-gnome-window.ui
locales/: CMakeLists.txt  passwordchecker.pot
locales/ru/: passwordchecker.po  passwordchecker.po~
locales/ru/LC_MESSAGES/: passwordchecker.mo
passwordchecker/: passwordchecker-app.c  passwordchecker-app.h  passwordchecker-indicator.c  passwordchecker-indicator.h  passwordchecker-ldap.c  passwordchecker-ldap.h  passwordchecker-ui.c  passwordchecker-window.c  passwordchecker-window.h  passwordchecker.c  winbind-helper.c  winbind-helper.h
